--- a/index.html
+++ b/index.html
@@ -8,12 +8,74 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!-- Font Awesome CSS -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/main.css">
 
-  <title>Hello, world!</title>
+  <title>Spangoss</title>
+
 </head>
 
-<body>
-  <h1>Hello, world!</h1>
+<body class="bg-dark text-muted">
+
+  <div class="container-flex d-flex flex-column min-vh-100">
+
+    <!-- Navigation -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.svg" alt="logo" height="24" class="d-inline-block align-text-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Stuff</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Things</i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</i></a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.instagram.com/mook_spangoss/"><i class="fab fa-instagram fa-lg"></i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.youtube.com/channel/UChkJuhmQBMMHQ-LHgXgEesA"><i class="fab fa-youtube fa-lg"></i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://untappd.com/user/Spangoss"><i class="fa fa-beer fa-lg"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <div class="container my-auto pb-5 justify-content-center text-center">
+      <div class="block">
+        <img src="images/avatar.png" class="img-fluid rounded-circle border border-secondary avatar" alt="avatar">
+      </div>
+      <div class="my-3 pb-5">
+        <img src="images/logo.svg" class="headline mb-2" alt="avatar">
+        <p class="text-teal-light">The random code doodlings of Mark Branscombe</p>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="d-flex justify-content-center fixed-bottom">
+      <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
+    </footer>
+  </div>
+  </div>
 
 
   <!-- Bootstrap Bundle with Popper -->
