--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/main.css">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#BF1D90">
+  <meta name="msapplication-TileColor" content="#212529">
+  <meta name="theme-color" content="#212529">
   <title>Spangoss</title>
 
 </head>
@@ -24,9 +30,12 @@
     <!-- Navigation -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+        <div class="container-fluid mx-3">
+          <a class="navbar-brand d-none d-sm-block" href="index.html">
             <img src="images/logo.svg" alt="logo" height="24" class="d-inline-block align-text-top">
+          </a>
+          <a class="navbar-brand d-block d-sm-none" href="index.html">
+            <img src="images/logo-sm.svg" alt="logo" height="36" class="d-inline-block align-text-top">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,14 +43,14 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Stuff</a>
+                <a class="nav-link" href="stuff.html">Stuff</a>
               </li>
-              <li class="nav-item">
+              <!--<li class="nav-item">
                 <a class="nav-link" href="#">Things</i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</i></a>
-              </li>
+              </li>-->
             </ul>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
@@ -62,10 +71,10 @@
     <!-- Hero Section -->
     <div class="container my-auto pb-5 justify-content-center text-center">
       <div class="block">
-        <img src="images/avatar.png" class="img-fluid rounded-circle border border-secondary avatar" alt="avatar">
+        <img src="images/avatar.png" class="img-fluid rounded-circle border border-teal avatar" alt="avatar">
       </div>
       <div class="my-3 pb-5">
-        <img src="images/logo.svg" class="headline mb-2" alt="avatar">
+        <img src="images/logo.svg" class="img-fluid headline mb-2" alt="avatar">
         <p class="text-teal-light">The random code doodlings of Mark Branscombe</p>
       </div>
     </div>
