Fix responsive column sizes on 'Things' page.

--- a/stuff.html
+++ b/stuff.html
@@ -58,7 +58,7 @@
   <!-- Posts Section -->
   <div class="container my-5">
     <div class="row" data-masonry='{"percentPosition": true }'>
-      <div class="col-4 mb-3">
+      <div class="col-md-4 mb-3">
         <div class="card card-zoom bg-black">
           <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
           <div class="card-body">
@@ -68,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 mb-4">
+      <div class="col-md-4 mb-4">
         <div class="card card-zoom bg-black">
           <img src="images/wow-professions.jpg" class="card-img-top" alt="World of Warcraft Professions">
           <div class="card-body">
@@ -78,7 +78,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4 mb-4">
+      <div class="col-md-4 mb-4">
         <div class="card card-zoom bg-black">
           <img src="images/discord.jpeg" class="card-img-top" alt="Discord">
           <div class="card-body">
