--- a/discord-emojis.html
+++ b/discord-emojis.html
@@ -29,8 +29,11 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid mx-3">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand d-none d-sm-block" href="index.html">
           <img src="images/logo.svg" alt="logo" height="24" class="d-inline-block align-text-top">
+        </a>
+        <a class="navbar-brand d-block d-sm-none" href="index.html">
+          <img src="images/logo-sm.svg" alt="logo" height="36" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
