Fix footer placement on all pages.

--- a/stuff.html
+++ b/stuff.html
@@ -126,7 +126,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="d-flex justify-content-center fixed-bottom">
+    <footer class="text-center">
       <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
     </footer>
   </div>
