--- a/wow-professions.html
+++ b/wow-professions.html
@@ -197,7 +197,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="d-flex justify-content-center">
+  <footer class="text-center">
     <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
   </footer>
 
