Fix typo on index footer class.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="dtext-center">
+    <footer class="text-center">
       <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
     </footer>
   </div>
