--- a/wow-professions.html
+++ b/wow-professions.html
@@ -79,10 +79,10 @@
       </div>
     </div>
 
-    <!-- Tab Pills -->
+    <!-- Tabs -->
     <div class="row pb-5">
       <div class="col" role="navigation">
-        <ul class="nav nav-pills nav-fill py-3 px-1">
+        <ul class="nav nav-tabs mb-4 nav-fill">
           <li class="nav-item" role="presentation">
             <a class="nav-link active" id="enchanting-tab" data-bs-toggle="tab" data-bs-target="#enchanting" role="tab" aria-controls="home" aria-selected="true">Enchanting</a>
           </li>
@@ -106,8 +106,8 @@
                   </div>
                   <div class="col-6">
                     <select ng-model="enchantingCategorySelect" class="form-select bg-dark text-muted" aria-label="Enchanting category select">
-                      <option selected value="{{$scope.enchantingCategoriesStored}}">Select Category</option>
-                      <option ng-repeat="cat in enchantingCategoriesStored" value="{{cat}}">{{cat}}</option>
+                      <option selected value>Select Category</option>
+                      <option ng-repeat="skill in enchantingSkillsStored | unique: 'category'" value="{{skill.category}}">{{skill.category}}</option>
                     </select>
                   </div>
                 </div>
@@ -120,6 +120,7 @@
               </ul>
             </div>
           </div>
+
           <!-- Tailoring Tab Content-->
           <div class="tab-pane fade" id="tailoring" role="tabpanel" aria-labelledby="enchanting-tab">
             <div class="card bg-black">
@@ -152,7 +153,12 @@
             <div class="row my-4">
               <div class="col">
                 <h5 class="text-light">TradeSkillExporter Parsing Tool</h5>
-                <p>This is used to parse the output from <a href="https://www.curseforge.com/wow/addons/tradeskillexporter">TradeSkillExporter</a> to build an array of objects containing the skill and it's category</p>
+                <p>Currently there are two addons that can be used to export profession skills from World of Warcraft Classic. </p>
+                <p><a href="https://www.curseforge.com/wow/addons/professions-exporter">Professions exporter</a> exports trade skills as an array of objects, but it currently does not contain any categories for enchanting formulas.</p>
+
+                <p><a href="https://www.curseforge.com/wow/addons/tradeskillexporter">TradeSkillExporter</a> exports data as a simple list. This import tool can be used to parse the output from TradeSkillExporter to build an array of objects
+                  containing the skill and it's category.</p>
+
                 <div class="form-floating">
                   <textarea ng-model="tradeSkillsInput" class="form-control" placeholder="Paste Trade Skills string here" id="tradeSkillsInput" style="height: 10rem"></textarea>
                   <label for="floatingTextarea2">Trade Skills Input</label>
@@ -170,10 +176,6 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    <h6>Profession Categories</h6>
-                    <div class="alert alert-secondary" role="alert">
-                      <code id="wowProfessionCategories"></code>
-                    </div>
                     <h6>Profession Skills</h6>
                     <div class="alert alert-secondary overflow-auto professions-output" role="alert">
                       <code id="wowProfessions"></code>
@@ -181,7 +183,6 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-sm btn-teal" id="copySkills" ng-click="copyWowTradeSkills('wowProfessionCategories')">Copy Categories</button>
                     <button type="button" class="btn btn-sm btn-teal" id="copySkills" ng-click="copyWowTradeSkills('wowProfessions')">Copy Skills</button>
                   </div>
                 </div>
