--- a/discord-emojis.html
+++ b/discord-emojis.html
@@ -85,7 +85,7 @@
 
       <!-- Modal -->
       <div class="modal fade" id="discordEmojiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="discordEmojiModal">Discord Emojis</h5>
@@ -112,7 +112,6 @@
     <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
   </footer>
   </div>
-
 
 
   <!-- Bootstrap Bundle with Popper -->
