--- a/discord-emojis.html
+++ b/discord-emojis.html
@@ -69,7 +69,7 @@
   <!-- Content -->
   <div class="container mt-5">
     <div class="row">
-      <div class="col">
+      <div class="col-md-10 mx-auto">
         <h3 class="mb-3">
           <span>&#127465; &#127470; &#127480; &#127464; &#127476; &#127479; &#127465;</span>
           <span class="mx-3">&#127466; &#127474; &#127476; &#127471; &#127470;</span>
