--- a/wow-professions.html
+++ b/wow-professions.html
@@ -73,7 +73,7 @@
   <!-- Content -->
   <div class="container my-5">
     <div class="row">
-      <div class="col">
+      <div class="col-md-10 mx-auto">
         <h2 class="text-light">World of Warcraft Professions</h2>
         <p>Here are some recipes that I can make in World of Warcraft Classic: The Burning Crusade.</p>
       </div>
@@ -81,7 +81,7 @@
 
     <!-- Tabs -->
     <div class="row pb-5">
-      <div class="col" role="navigation">
+      <div class="col-md-10 mx-auto" role="navigation">
         <ul class="nav nav-tabs mb-4 nav-fill">
           <li class="nav-item" role="presentation">
             <a class="nav-link active" id="enchanting-tab" data-bs-toggle="tab" data-bs-target="#enchanting" role="tab" aria-controls="home" aria-selected="true">Enchanting</a>
