--- a/discord-emojis.html
+++ b/discord-emojis.html
@@ -70,10 +70,11 @@
   <div class="container mt-5">
     <div class="row">
       <div class="col-md-10 mx-auto">
-        <h3 class="mb-3">
+        <h3>
           <span>&#127465; &#127470; &#127480; &#127464; &#127476; &#127479; &#127465;</span>
           <span class="mx-3">&#127466; &#127474; &#127476; &#127471; &#127470;</span>
-          <span>&#127468; &#127466; &#127475; &#127466; &#127479; &#127462; &#127481; &#127476; &#127479;</span>
+        </h3>
+        <h3 class="mb-3"><span>&#127468; &#127466; &#127475; &#127466; &#127479; &#127462; &#127481; &#127476; &#127479;</span>
         </h3>
         <p>Type a message and press convert to get a string that can be pasted directly into Discord chat that represents your message as emoji letters.</p>
         <div class="form-floating my-4">
