--- a/wow-professions.html
+++ b/wow-professions.html
@@ -13,16 +13,18 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/main.css">
   <!-- Favicon -->
+  <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#BF1D90">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#fff">
   <meta name="msapplication-TileColor" content="#212529">
   <meta name="theme-color" content="#212529">
+
   <!-- Angular JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-  <script src="scripts/trade-skills.js"></script>
+
   <title>Spangoss</title>
 
 </head>
@@ -217,9 +219,7 @@
   <script src="https://wow.zamimg.com/widgets/power.js"></script>
 
   <!-- Convert Tradeskills -->
-  <script src="scripts/convert-trade-skills.js"></script>
-
-
+  <script src="scripts/trade-skills.js"></script>
 
 </body>
 
