--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#E77FC9">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#93166f">
   <meta name="msapplication-TileColor" content="#212529">
   <meta name="theme-color" content="#212529">
 
