--- a/stuff.html
+++ b/stuff.html
@@ -53,13 +53,13 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/mook_spangoss/"><i class="fab fa-instagram fa-lg"></i></a>
+              <a class="nav-link" href="https://www.instagram.com/mook_spangoss/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.youtube.com/channel/UChkJuhmQBMMHQ-LHgXgEesA"><i class="fab fa-youtube fa-lg"></i></a>
+              <a class="nav-link" href="https://www.youtube.com/channel/UChkJuhmQBMMHQ-LHgXgEesA" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://untappd.com/user/Spangoss"><i class="fa fa-beer fa-lg"></i></a>
+              <a class="nav-link" href="https://untappd.com/user/Spangoss" target="_blank"><i class="fa fa-beer fa-lg"></i></a>
             </li>
           </ul>
         </div>
