Fix Stuff page on mobile.

--- a/stuff.html
+++ b/stuff.html
@@ -68,42 +68,40 @@
   </header>
 
   <!-- Posts Section -->
-  <div class="container my-5">
-
-
-
-    <div class="row" data-masonry='{"percentPosition": true }'>
-      <div class="col-md-4 mb-3">
-        <div class="card card-zoom bg-black">
-          <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
-          <div class="card-body">
-            <h5 class="card-title text-light">Plunder de Hond Concept</h5>
-            <p class="card-text">A concept design for my World of Warcraft Classic Guild's website.</p>
-            <a href="https://spangoss.net/pdh-concept.github.io/" target="_blank" class="stretched-link"></a>
+  <div class="container mt-5">
+    <div class="col-md-10 mx-auto">
+      <div class="row" data-masonry='{"percentPosition": true }'>
+        <div class="col-md-4 mb-3">
+          <div class="card card-zoom bg-black">
+            <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
+            <div class="card-body">
+              <h5 class="card-title text-light">Plunder de Hond Concept</h5>
+              <p class="card-text">A concept design for my World of Warcraft Classic Guild's website.</p>
+              <a href="https://spangoss.net/pdh-concept.github.io/" target="_blank" class="stretched-link"></a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card card-zoom bg-black">
-          <img src="images/wow-professions.jpg" class="card-img-top" alt="World of Warcraft Professions">
-          <div class="card-body">
-            <h5 class="card-title text-light">World of Warcraft Tradeskills</h5>
-            <p class="card-text">A page to display my World of Warcraft character's trade skills.</p>
-            <a href="wow-professions.html" class="stretched-link"></a>
+        <div class="col-md-4 mb-4">
+          <div class="card card-zoom bg-black">
+            <img src="images/wow-professions.jpg" class="card-img-top" alt="World of Warcraft Professions">
+            <div class="card-body">
+              <h5 class="card-title text-light">World of Warcraft Tradeskills</h5>
+              <p class="card-text">A page to display my World of Warcraft character's trade skills.</p>
+              <a href="wow-professions.html" class="stretched-link"></a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 mb-4">
-        <div class="card card-zoom bg-black">
-          <img src="images/discord.jpeg" class="card-img-top" alt="Discord">
-          <div class="card-body">
-            <h5 class="card-title text-light">Discord Letter Emoji Generator</h5>
-            <p class="card-text">A tool to covert text to Discord regional indicator emojis.</p>
-            <a href="discord-emojis.html" class="stretched-link"></a>
+        <div class="col-md-4 mb-4">
+          <div class="card card-zoom bg-black">
+            <img src="images/discord.jpeg" class="card-img-top" alt="Discord">
+            <div class="card-body">
+              <h5 class="card-title text-light">Discord Letter Emoji Generator</h5>
+              <p class="card-text">A tool to covert text to Discord regional indicator emojis.</p>
+              <a href="discord-emojis.html" class="stretched-link"></a>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- <div class="col-4 mb-4">
+        <!-- <div class="col-4 mb-4">
         <div class="card bg-black">
           <img src="images/placeholder.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -134,14 +132,15 @@
         </div>
       </div>
     </div>-->
-
+      </div>
     </div>
-
-    <!-- Footer -->
-    <footer class="text-center">
-      <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
-    </footer>
   </div>
+
+  <!-- Footer -->
+  <footer class="text-center">
+    <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
+  </footer>
+
 
 
   <!-- Bootstrap Bundle with Popper -->
