Fix Teal button colours.

--- a/cartwall.html
+++ b/cartwall.html
@@ -79,10 +79,10 @@
       <div class="row" data-masonry='{"percentPosition": true }'>
 
         <div class="col-sm-3 d-grid mb-4">
-          <button id="bloody-rubbish-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('bloody-rubbish')" oncontextmenu="resetAudio('bloody-rubbish'); return false;">
+          <button id="bloody-rubbish-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('bloody-rubbish', 'teal')" oncontextmenu="resetAudio('bloody-rubbish', 'teal'); return false;">
             <h5 id="bloody-rubbish-text">Bloody Rubbish</h5>
             <h1 class="playback-btn display-6"><i id="bloody-rubbish-PlaybackState" class="fa"></i></h1>
-            <audio id="bloody-rubbish" onended="audioEnded('bloody-rubbish')">
+            <audio id="bloody-rubbish" onended="audioEnded('bloody-rubbish', 'teal')">
               <source src="audio/bloody-rubbish.mp3" type="audio/mpeg">
             </audio>
           </button>
@@ -117,10 +117,10 @@
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="dinner-winner-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('dinner-winner')" oncontextmenu="resetAudio('dinner-winner');return false;">
+          <button id="dinner-winner-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('dinner-winner', 'teal')" oncontextmenu="resetAudio('dinner-winner', 'teal');return false;">
             <h5 id="dinner-winner-text">Dinner Winner</h5>
             <h1 class="playback-btn display-6"><i id="dinner-winner-PlaybackState" class="fa"></i></h1>
-            <audio id="dinner-winner" onended="audioEnded('dinner-winner')">
+            <audio id="dinner-winner" onended="audioEnded('dinner-winner', 'teal')">
               <source src="audio/dinner-winner.mp3" type="audio/mpeg">
             </audio>
           </button>
@@ -135,10 +135,10 @@
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="factoids-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('factoids')" oncontextmenu="resetAudio('factoids');return false;">
+          <button id="factoids-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('factoids', 'teal')" oncontextmenu="resetAudio('factoids', 'teal');return false;">
             <h5 id="factoids-text">Factoids</h5>
             <h1 class="playback-btn display-6"><i id="factoids-PlaybackState" class="fa"></i></h1>
-            <audio id="factoids" onended="audioEnded('factoids')">
+            <audio id="factoids" onended="audioEnded('factoids', 'teal')">
               <source src="audio/factoids.mp3" type="audio/mpeg">
             </audio>
           </button>
@@ -153,10 +153,10 @@
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="fred-durst-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('fred-durst')" oncontextmenu="resetAudio('fred-durst');return false;">
+          <button id="fred-durst-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('fred-durst', 'teal')" oncontextmenu="resetAudio('fred-durst', 'teal');return false;">
             <h5 id="fred-durst-text">Fred Durst</h5>
             <h1 class="playback-btn display-6"><i id="fred-durst-PlaybackState" class="fa"></i></h1>
-            <audio id="fred-durst" onended="audioEnded('fred-durst')">
+            <audio id="fred-durst" onended="audioEnded('fred-durst', 'teal')">
               <source src="audio/fred-durst.mp3" type="audio/mpeg">
             </audio>
           </button>
@@ -171,10 +171,10 @@
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="hello-sailor-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('hello-sailor')" oncontextmenu="resetAudio('hello-sailor');return false;">
+          <button id="hello-sailor-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('hello-sailor', 'teal')" oncontextmenu="resetAudio('hello-sailor', 'teal');return false;">
             <h5 id="hello-sailor-text">Hello Sailor</h5>
             <h1 class="playback-btn display-6"><i id="hello-sailor-PlaybackState" class="fa"></i></h1>
-            <audio id="hello-sailor" onended="audioEnded('hello-sailor')">
+            <audio id="hello-sailor" onended="audioEnded('hello-sailor', 'teal')">
               <source src="audio/hello-sailor.mp3" type="audio/mpeg">
             </audio>
           </button>
@@ -198,10 +198,10 @@
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="mccartney-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('mccartney')" oncontextmenu="resetAudio('mccartney');return false;">
+          <button id="mccartney-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('mccartney', 'teal')" oncontextmenu="resetAudio('mccartney', 'teal');return false;">
             <h5 id="mccartney-text">McCartney</h5>
             <h1 class="playback-btn display-6"><i id="mccartney-PlaybackState" class="fa"></i></h1>
-            <audio id="mccartney" onended="audioEnded('mccartney')">
+            <audio id="mccartney" onended="audioEnded('mccartney', 'teal')">
               <source src="audio/mccartney.mp3" type="audio/mpeg">
             </audio>
           </button>
@@ -261,10 +261,10 @@
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="tea-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('tea')" oncontextmenu="resetAudio('tea');return false;">
+          <button id="tea-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('tea', 'teal')" oncontextmenu="resetAudio('tea', 'teal');return false;">
             <h5 id="tea-text">Tea</h5>
             <h1 class="playback-btn display-6"><i id="tea-PlaybackState" class="fa"></i></h1>
-            <audio id="tea" onended="audioEnded('tea')">
+            <audio id="tea" onended="audioEnded('tea', 'teal')">
               <source src="audio/tea.mp3" type="audio/mpeg">
             </audio>
           </button>
@@ -279,19 +279,19 @@
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="yorkshire-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('yorkshire')" oncontextmenu="resetAudio('yorkshire');return false;">
+          <button id="yorkshire-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('yorkshire', 'teal')" oncontextmenu="resetAudio('yorkshire', 'teal');return false;">
             <h5 id="yorkshire-text">This is Yorkshire</h5>
             <h1 class="playback-btn display-6"><i id="yorkshire-PlaybackState" class="fa"></i></h1>
-            <audio id="yorkshire" onended="audioEnded('yorkshire')">
+            <audio id="yorkshire" onended="audioEnded('yorkshire', 'teal')">
               <source src="audio/yorkshire.mp3" type="audio/mpeg">
             </audio>
           </button>
         </div>
         <div class="col-sm-3 d-grid mb-4">
-          <button id="tom-jones-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('tom-jones')" oncontextmenu="resetAudio('tom-jones');return false;">
+          <button id="tom-jones-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('tom-jones', 'teal')" oncontextmenu="resetAudio('tom-jones', 'teal');return false;">
             <h5 id="tom-jones-text">Tom Jones</h5>
             <h1 class="playback-btn display-6"><i id="tom-jones-PlaybackState" class="fa"></i></h1>
-            <audio id="tom-jones" onended="audioEnded('tom-jones')">
+            <audio id="tom-jones" onended="audioEnded('tom-jones', 'teal')">
               <source src="audio/tom-jones.mp3" type="audio/mpeg">
             </audio>
           </button>
