Cartwall tweaks and update to black background styles.

--- a/cartwall.html
+++ b/cartwall.html
@@ -21,6 +21,9 @@
   <meta name="msapplication-TileColor" content="#212529">
   <meta name="theme-color" content="#212529">
 
+  <!-- Masonary -->
+  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+
   <title>Cartwall</title>
 
 </head>
@@ -72,7 +75,7 @@
   <div class="container mt-5">
 
     <div class="col-md-10 mx-auto">
-      <h3 class="text-light">The Cartwall <a tabindex="0" class="text-muted float-end" role="button" data-bs-toggle="popover" data-bs-trigger="focus" data-html="true" data-bs-content="<p><code>Left-click to play / pause.</code></p> <p><code>Right-click to reset the clip</code></p>"><i
+      <h3 class="text-light">The Cartwall <a tabindex="0" class="text-muted float-end" role="button" data-bs-toggle="popover" data-bs-placement="left" data-html="true" data-bs-content="<code>Left-click to play / pause.</code><br><code>Right-click to reset the clip</code>"><i
             class="fa fa-info-circle"></i></a></h3>
       <p>My tribute to Shaun Keaveny's Radio 6 Music show.</p>
 
@@ -329,10 +332,6 @@
 
   <!-- Popover Functions -->
   <script src="scripts/popover.js"></script>
-
-
-  <!-- Masonary -->
-  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
 
 </body>
 
