--- a/stuff.html
+++ b/stuff.html
@@ -21,6 +21,9 @@
   <meta name="msapplication-TileColor" content="#212529">
   <meta name="theme-color" content="#212529">
 
+  <!-- Masonary -->
+  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+
   <title>Spangoss - Stuff</title>
 </head>
 
@@ -72,7 +75,7 @@
     <div class="col-md-10 mx-auto">
       <div class="row" data-masonry='{"percentPosition": true }'>
         <div class="col-md-4 mb-3">
-          <div class="card card-zoom bg-black">
+          <div class="card bg-black card-drop-shadow card-zoom">
             <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
             <div class="card-body">
               <h5 class="card-title text-light">Plunder de Hond Concept</h5>
@@ -82,7 +85,7 @@
           </div>
         </div>
         <div class="col-md-4 mb-4">
-          <div class="card card-zoom bg-black">
+          <div class="card bg-black card-drop-shadow card-zoom">
             <img src="images/wow-professions.jpg" class="card-img-top" alt="World of Warcraft Professions">
             <div class="card-body">
               <h5 class="card-title text-light">World of Warcraft Tradeskills</h5>
@@ -92,7 +95,7 @@
           </div>
         </div>
         <div class="col-md-4 mb-4">
-          <div class="card card-zoom bg-black">
+          <div class="card bg-black card-drop-shadow card-zoom">
             <img src="images/discord.jpeg" class="card-img-top" alt="Discord">
             <div class="card-body">
               <h5 class="card-title text-light">Discord Letter Emoji Generator</h5>
@@ -101,8 +104,8 @@
             </div>
           </div>
         </div>
-        <div class="col-4 mb-4">
-          <div class="card card-zoom bg-black">
+        <div class="col-md-4 col-sm-6 mb-4">
+          <div class="card bg-black card-drop-shadow card-zoom">
             <img src="images/shaun-keaveny.jpg" class="card-img-top" alt="Cartwall">
             <div class="card-body">
               <h5 class="card-title text-light">Shaun Keaveney's Cartwall</h5>
@@ -146,8 +149,7 @@
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
-  <!-- Masonary -->
-  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+
 
 </body>
 
