--- a/wow-professions.html
+++ b/wow-professions.html
@@ -148,19 +148,25 @@
             </div>
           </div>
 
-          <!-- Enchanting Tab Content-->
+          <!-- Import Tab Content-->
+
+
+
           <div class="tab-pane fade" id="import" role="tabpanel" aria-labelledby="enchanting-tab">
-            <!-- Input Box -->
+
             <div class="row my-4">
               <div class="col">
+
                 <h5 class="text-light">TradeSkillExporter Parsing Tool</h5>
                 <p>Currently there are two addons that can be used to export profession skills from World of Warcraft Classic. </p>
-                <p><a href="https://www.curseforge.com/wow/addons/professions-exporter" target="_blank">Professions exporter</a> exports trade skills as an array of objects, but it currently does not contain any categories for enchanting formulas.</p>
+                <p><a href="https://www.curseforge.com/wow/addons/professions-exporter" target="_blank">Professions exporter</a> exports trade skills as an array of objects, but it currently does not contain any categories for enchanting
+                  formulas.</p>
 
-                <p><a href="https://www.curseforge.com/wow/addons/tradeskillexporter" target="_blank">TradeSkillExporter</a> exports data as a simple list. This import tool can be used to parse the output from TradeSkillExporter to build an array of
+                <p><a href="https://www.curseforge.com/wow/addons/tradeskillexporter" target="_blank">TradeSkillExporter</a> exports data as a simple list. This import tool can be used to parse the output from TradeSkillExporter to build an
+                  array of
                   objects
                   containing the skill and it's category.</p>
-
+                <!-- Input Box -->
                 <div class="form-floating">
                   <textarea ng-model="tradeSkillsInput" class="form-control" placeholder="Paste Trade Skills string here" id="tradeSkillsInput" style="height: 10rem"></textarea>
                   <label for="floatingTextarea2">Trade Skills Input</label>
