Fix masonary layout o 'Stuff' and move to double coloumn layout on x-small on 'Cartwall'.

--- a/cartwall.html
+++ b/cartwall.html
@@ -81,7 +81,7 @@
 
       <div class="row" data-masonry='{"percentPosition": true }'>
 
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="bloody-rubbish-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('bloody-rubbish', 'teal')" oncontextmenu="resetAudio('bloody-rubbish', 'teal'); return false;">
             <h5 id="bloody-rubbish-text">Bloody Rubbish</h5>
             <h1 class="playback-btn display-6"><i id="bloody-rubbish-PlaybackState" class="fa"></i></h1>
@@ -91,7 +91,7 @@
           </button>
         </div>
 
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="buttery-biscuit-base-btn" class="btn btn-teal-light position-relative py-3" onclick="playAudio('buttery-biscuit-base', 'teal-light')" oncontextmenu="resetAudio('buttery-biscuit-base', 'teal-light');return false;">
             <h5 id="buttery-biscuit-base-text">Buttery Biscuit Base</h5>
             <h1 class="playback-btn display-6"><i id="buttery-biscuit-base-PlaybackState" class="fa"></i></h1>
@@ -101,7 +101,7 @@
           </button>
         </div>
 
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="cats-in-gangs-btn" class="btn btn-pink position-relative py-3" onclick="playAudio('cats-in-gangs', 'pink')" oncontextmenu="resetAudio('cats-in-gangs', 'pink');return false;">
             <h5 id="cats-in-gangs-text">Cats in Gangs</h5>
             <h1 class="playback-btn display-6"><i id="cats-in-gangs-PlaybackState" class="fa"></i></h1>
@@ -110,7 +110,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="come-on-btn" class="btn btn-secondary position-relative py-3" onclick="playAudio('come-on', 'secondary')" oncontextmenu="resetAudio('come-on', 'secondary');return false;">
             <h5 id="come-on-text">Come On!</h5>
             <h1 class="playback-btn display-6"><i id="come-on-PlaybackState" class="fa"></i></h1>
@@ -119,7 +119,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="dinner-winner-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('dinner-winner', 'teal')" oncontextmenu="resetAudio('dinner-winner', 'teal');return false;">
             <h5 id="dinner-winner-text">Dinner Winner</h5>
             <h1 class="playback-btn display-6"><i id="dinner-winner-PlaybackState" class="fa"></i></h1>
@@ -128,7 +128,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="every-animal-btn" class="btn btn-pink position-relative py-3" onclick="playAudio('every-animal', 'pink')" oncontextmenu="resetAudio('every-animal', 'pink');return false;">
             <h5 id="every-animal-text">Every Animal</h5>
             <h1 class="playback-btn display-6"><i id="every-animal-PlaybackState" class="fa"></i></h1>
@@ -137,7 +137,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="factoids-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('factoids', 'teal')" oncontextmenu="resetAudio('factoids', 'teal');return false;">
             <h5 id="factoids-text">Factoids</h5>
             <h1 class="playback-btn display-6"><i id="factoids-PlaybackState" class="fa"></i></h1>
@@ -146,7 +146,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="fish-btn" class="btn btn-pink position-relative py-3" onclick="playAudio('fish'), 'pink'" oncontextmenu="resetAudio('fish', 'pink');return false;">
             <h5 id="fish-text">Fish</h5>
             <h1 class="playback-btn display-6"><i id="fish-PlaybackState" class="fa"></i></h1>
@@ -155,7 +155,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="fred-durst-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('fred-durst', 'teal')" oncontextmenu="resetAudio('fred-durst', 'teal');return false;">
             <h5 id="fred-durst-text">Fred Durst</h5>
             <h1 class="playback-btn display-6"><i id="fred-durst-PlaybackState" class="fa"></i></h1>
@@ -164,7 +164,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="ha-btn" class="btn btn-pink-light position-relative py-3" onclick="playAudio('ha', 'pink-light')" oncontextmenu="resetAudio('ha', 'pink-light');return false;">
             <h5 id="ha-text">Ha!</h5>
             <h1 class="playback-btn display-6"><i id="ha-PlaybackState" class="fa"></i></h1>
@@ -173,7 +173,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="hello-sailor-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('hello-sailor', 'teal')" oncontextmenu="resetAudio('hello-sailor', 'teal');return false;">
             <h5 id="hello-sailor-text">Hello Sailor</h5>
             <h1 class="playback-btn display-6"><i id="hello-sailor-PlaybackState" class="fa"></i></h1>
@@ -182,7 +182,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="it-wont-go-in-btn" class="btn btn-pink position-relative py-3" onclick="playAudio('it-wont-go-in', 'pink')" oncontextmenu="resetAudio('it-wont-go-in', 'pink');return false;">
             <h5 id="it-wont-go-in-text">It Won't Go In</h5>
             <h1 class="playback-btn display-6"><i id="it-wont-go-in-PlaybackState" class="fa"></i></h1>
@@ -191,7 +191,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="lets-be-avin-you-btn" class="btn btn-secondary position-relative py-3" onclick="playAudio('lets-be-avin-you', 'secondary')" oncontextmenu="resetAudio('lets-be-avin-you', 'secondary');return false;">
             <h5 id="lets-be-avin-you-text">Lets be 'avin You</h5>
             <h1 class="playback-btn display-6"><i id="lets-be-avin-you-PlaybackState" class="fa"></i></h1>
@@ -200,7 +200,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="mccartney-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('mccartney', 'teal')" oncontextmenu="resetAudio('mccartney', 'teal');return false;">
             <h5 id="mccartney-text">McCartney</h5>
             <h1 class="playback-btn display-6"><i id="mccartney-PlaybackState" class="fa"></i></h1>
@@ -209,7 +209,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="no-authority-btn" class="btn btn-primary position-relative py-3" onclick="playAudio('no-authority', 'primary')" oncontextmenu="resetAudio('no-authority', 'primary');return false;">
             <h5 id="no-authority-text">No Authority</h5>
             <h1 class="playback-btn display-6"><i id="no-authority-PlaybackState" class="fa"></i></h1>
@@ -218,7 +218,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="noel-edmonds-btn" class="btn btn-pink position-relative py-3" onclick="playAudio('noel-edmonds', 'pink')" oncontextmenu="resetAudio('noel-edmonds', 'pink');return false;">
             <h5 id="noel-edmonds-text">Noel Edmonds</h5>
             <h1 class="playback-btn display-6"><i id="noel-edmonds-PlaybackState" class="fa"></i></h1>
@@ -227,7 +227,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="onions-btn" class="btn btn-pink-light position-relative py-3" onclick="playAudio('onions')" oncontextmenu="resetAudio('onions');return false;">
             <h5 id="onions-text">Onions</h5>
             <h1 class="playback-btn display-6"><i id="onions-PlaybackState" class="fa"></i></h1>
@@ -236,7 +236,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="read-them-btn" class="btn btn-primary position-relative py-3" onclick="playAudio('read-them', 'primary')" oncontextmenu="resetAudio('read-them', 'primary');return false;">
             <h5 id="read-them-text">Read and Understand</h5>
             <h1 class="playback-btn display-6"><i id="read-them-PlaybackState" class="fa"></i></h1>
@@ -245,7 +245,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="sausage-btn" class="btn btn-teal-light position-relative py-3" onclick="playAudio('sausage', 'teal-light')" oncontextmenu="resetAudio('sausage', 'teal-light');return false;">
             <h5 id="sausage-text">Sausage Magic</h5>
             <h1 class="playback-btn display-6"><i id="sausage-PlaybackState" class="fa"></i></h1>
@@ -254,7 +254,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="stop-touching-it-btn" class="btn btn-teal-light position-relative py-3" onclick="playAudio('stop-touching-it', 'teal-light')" oncontextmenu="resetAudio('stop-touching-it', 'teal-light');return false;">
             <h5 id="stop-touching-it-text">Stop Touching it</h5>
             <h1 class="playback-btn display-6"><i id="stop-touching-it-PlaybackState" class="fa"></i></h1>
@@ -263,7 +263,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="tea-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('tea', 'teal')" oncontextmenu="resetAudio('tea', 'teal');return false;">
             <h5 id="tea-text">Tea</h5>
             <h1 class="playback-btn display-6"><i id="tea-PlaybackState" class="fa"></i></h1>
@@ -272,7 +272,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="teams-meeting-btn" class="btn btn-primary position-relative py-3" onclick="playAudio('teams-meeting', 'primary')" oncontextmenu="resetAudio('teams-meeting', 'primary');return false;">
             <h5 id="teams-meeting-text">Teams Meeting</h5>
             <h1 class="playback-btn display-6"><i id="teams-meeting-PlaybackState" class="fa"></i></h1>
@@ -281,7 +281,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="yorkshire-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('yorkshire', 'teal')" oncontextmenu="resetAudio('yorkshire', 'teal');return false;">
             <h5 id="yorkshire-text">This is Yorkshire</h5>
             <h1 class="playback-btn display-6"><i id="yorkshire-PlaybackState" class="fa"></i></h1>
@@ -290,7 +290,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="tom-jones-btn" class="btn btn-teal position-relative py-3" onclick="playAudio('tom-jones', 'teal')" oncontextmenu="resetAudio('tom-jones', 'teal');return false;">
             <h5 id="tom-jones-text">Tom Jones</h5>
             <h1 class="playback-btn display-6"><i id="tom-jones-PlaybackState" class="fa"></i></h1>
@@ -299,7 +299,7 @@
             </audio>
           </button>
         </div>
-        <div class="col-sm-3 d-grid mb-4">
+        <div class="col-6 col-sm-3 d-grid mb-4">
           <button id="uuuuur-btn" class="btn btn-pink-light position-relative py-3" onclick="playAudio('uuuuur', 'pink-light')" oncontextmenu="resetAudio('uuuuur', 'pink-light');return false;">
             <h5 id="uuuuur-text">Uuuuur...</h5>
             <h1 class="playback-btn display-6"><i id="uuuuur-PlaybackState" class="fa"></i></h1>
