Fix Masonary on Stuff.

--- a/stuff.html
+++ b/stuff.html
@@ -74,7 +74,7 @@
   <div class="container mt-5">
 
     <div class="row" data-masonry='{"percentPosition": true }'>
-      <div class="col-md-4 mb-3">
+      <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card bg-black card-drop-shadow card-zoom">
           <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
           <div class="card-body">
@@ -84,7 +84,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 mb-4">
+      <div class="col-sm-6 col-lg-4  mb-4">
         <div class="card bg-black card-drop-shadow card-zoom">
           <img src="images/wow-professions.jpg" class="card-img-top" alt="World of Warcraft Professions">
           <div class="card-body">
@@ -94,7 +94,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 mb-4">
+      <div class="col-sm-6 col-lg-4  mb-4">
         <div class="card bg-black card-drop-shadow card-zoom">
           <img src="images/discord.jpeg" class="card-img-top" alt="Discord">
           <div class="card-body">
@@ -104,7 +104,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-sm-6 mb-4">
+      <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card bg-black card-drop-shadow card-zoom">
           <img src="images/shaun-keaveny.jpg" class="card-img-top" alt="Cartwall">
           <div class="card-body">
