Fix Fish on the Cartwall.

--- a/cartwall.html
+++ b/cartwall.html
@@ -147,7 +147,7 @@
           </button>
         </div>
         <div class="col-6 col-sm-3 d-grid mb-4">
-          <button id="fish-btn" class="btn btn-pink position-relative py-3" onclick="playAudio('fish'), 'pink'" oncontextmenu="resetAudio('fish', 'pink');return false;">
+          <button id="fish-btn" class="btn btn-pink position-relative py-3" onclick="playAudio('fish', 'pink'), 'pink'" oncontextmenu="resetAudio('fish', 'pink');return false;">
             <h5 id="fish-text">Fish</h5>
             <h1 class="playback-btn display-6"><i id="fish-PlaybackState" class="fa"></i></h1>
             <audio id="fish" onended="audioEnded('fish', 'pink')">
