--- a/wow-professions.html
+++ b/wow-professions.html
@@ -57,13 +57,13 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/mook_spangoss/"><i class="fab fa-instagram fa-lg"></i></a>
+              <a class="nav-link" href="https://www.instagram.com/mook_spangoss/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.youtube.com/channel/UChkJuhmQBMMHQ-LHgXgEesA"><i class="fab fa-youtube fa-lg"></i></a>
+              <a class="nav-link" href="https://www.youtube.com/channel/UChkJuhmQBMMHQ-LHgXgEesA" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://untappd.com/user/Spangoss"><i class="fa fa-beer fa-lg"></i></a>
+              <a class="nav-link" href="https://untappd.com/user/Spangoss" v><i class="fa fa-beer fa-lg"></i></a>
             </li>
           </ul>
         </div>
@@ -149,9 +149,6 @@
           </div>
 
           <!-- Import Tab Content-->
-
-
-
           <div class="tab-pane fade" id="import" role="tabpanel" aria-labelledby="enchanting-tab">
 
             <div class="row my-4">
