--- a/stuff.html
+++ b/stuff.html
@@ -73,7 +73,7 @@
   <div class="container mt-5">
 
     <div class="row" data-masonry='{"percentPosition": true }'>
-      <div class="col-sm-6 col-lg-4 mb-4">
+      <div class="col-sm-6 col-lg-4 mx-auto">
         <div class="card bg-black card-drop-shadow card-zoom">
           <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
           <div class="card-body">
@@ -146,7 +146,7 @@
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   <!-- Masonary -->
-  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
 
 </body>
