Remove uneeded col-10.

--- a/stuff.html
+++ b/stuff.html
@@ -72,8 +72,9 @@
   <!-- Posts Section -->
   <div class="container mt-5">
 
+
     <div class="row" data-masonry='{"percentPosition": true }'>
-      <div class="col-sm-6 col-lg-4 mx-auto">
+      <div class="col-sm-6 col-lg-4 mb-4">
         <div class="card bg-black card-drop-shadow card-zoom">
           <img src="images/burning-crusade.jpeg" class="card-img-top" alt="World of Warcraft Burning Crusade">
           <div class="card-body">
@@ -135,7 +136,6 @@
       </div>
     </div>-->
     </div>
-
   </div>
 
   <!-- Footer -->
