--- a/discord-emojis.html
+++ b/discord-emojis.html
@@ -71,73 +71,70 @@
   <!-- Content -->
   <div class="container mt-5">
     <div class="row">
-      <div class="col-md-10 mx-auto">
-        <h3>
-          <span>&#127465; &#127470; &#127480; &#127464; &#127476; &#127479; &#127465;</span>
-          <span class="mx-3">&#127466; &#127474; &#127476; &#127471; &#127470;</span>
-        </h3>
-        <h3 class="mb-3"><span>&#127468; &#127466; &#127475; &#127466; &#127479; &#127462; &#127481; &#127476; &#127479;</span>
-        </h3>
-        <p>Type a message and press convert to get a string that can be pasted directly into Discord chat that represents your message as emoji letters.</p>
+
+      <h3>
+        <span>&#127465; &#127470; &#127480; &#127464; &#127476; &#127479; &#127465;</span>
+        <span class="mx-3">&#127466; &#127474; &#127476; &#127471; &#127470;</span>
+      </h3>
+      <h3 class="mb-3"><span>&#127468; &#127466; &#127475; &#127466; &#127479; &#127462; &#127481; &#127476; &#127479;</span>
+      </h3>
+      <p>Type a message and press convert to get a string that can be pasted directly into Discord chat that represents your message as emoji letters.</p>
+      <div class="col">
         <div class="form-floating my-4">
           <textarea class="form-control" placeholder="Type a message here" id="discordEmojiInput" oninput="checkInput()"></textarea>
           <label for="discordEmojiInput">Type Message here</label>
         </div>
         <button type="button" id="convertEmojis" class="btn btn-teal disabled" onclick="convertEmojis()" data-bs-toggle="modal" data-bs-target="#discordEmojiModal">Convert</button>
       </div>
+    </div>
 
-      <!-- Modal -->
-      <div class="modal fade" id="discordEmojiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="discordEmojiModal">Discord Emojis</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <!-- Modal -->
+    <div class="modal fade" id="discordEmojiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="discordEmojiModal">Discord Emojis</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="alert alert-secondary" role="alert">
+              <code id="discordEmojiString"></code>
             </div>
-            <div class="modal-body">
-              <div class="alert alert-secondary" role="alert">
-                <code id="discordEmojiString"></code>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-sm btn-teal" id="copyEmoji" onclick="copyEmojis()">Copy</button>
-            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-sm btn-teal" id="copyEmoji" onclick="copyEmojis()">Copy</button>
           </div>
         </div>
       </div>
-
     </div>
-  </div>
 
-  <!-- Footer -->
-  <footer class="text-center">
-    <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
-  </footer>
-  </div>
+    <!-- Footer -->
+    <footer class="text-center">
+      <p><i class="fa fa-code"></i> Code by Spangoss 2021</p>
+    </footer>
 
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
-  <!-- Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <!-- Convert Discord Emojis -->
+    <script src="scripts/convert-discord-emojis.js"></script>
 
-  <!-- Convert Discord Emojis -->
-  <script src="scripts/convert-discord-emojis.js"></script>
-
-  <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 
 
-  <script>
-    window.onload = function() {
-      // Parses the document body and
-      // inserts <img> tags in place of Unicode Emojis
-      twemoji.parse(document.body, {
-          folder: 'svg',
-          ext: '.svg'
-        } // This is to specify to Twemoji to use SVGs and not PNGs
-      );
+    <script>
+      window.onload = function() {
+        // Parses the document body and
+        // inserts <img> tags in place of Unicode Emojis
+        twemoji.parse(document.body, {
+            folder: 'svg',
+            ext: '.svg'
+          } // This is to specify to Twemoji to use SVGs and not PNGs
+        );
 
-    }
-  </script>
+      }
+    </script>
 
 
 </body>
