--- a/wow-professions.html
+++ b/wow-professions.html
@@ -74,132 +74,125 @@
   <!-- Content -->
   <div class="container my-5">
     <div class="row">
-      <div class="col-md-10 mx-auto">
-        <h3 class="text-light">World of Warcraft Professions</h3>
-        <p>Here are some recipes that I can make in World of Warcraft Classic: The Burning Crusade.</p>
-      </div>
+      <h3 class="text-light">World of Warcraft Professions</h3>
+      <p>Here are some recipes that I can make in World of Warcraft Classic: The Burning Crusade.</p>
     </div>
 
     <!-- Tabs -->
     <div class="row pb-5">
-      <div class="col-md-10 mx-auto" role="navigation">
-        <ul class="nav nav-tabs mb-4 nav-fill">
-          <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="enchanting-tab" data-bs-toggle="tab" data-bs-target="#enchanting" role="tab" aria-controls="home" aria-selected="true">Enchanting</a>
-          </li>
-          <li class="nav-item" role="presentation">
-            <a class="nav-link" id="tailoring-tab" data-bs-toggle="tab" data-bs-target="#tailoring" role="tab" aria-controls="tailoring" aria-selected="false">Tailoring</a>
-          </li>
-          <li class="nav-item" role="presentation">
-            <a class="nav-link" id="import-tab" data-bs-toggle="tab" data-bs-target="#import" role="tab" aria-controls="import" aria-selected="false">Import</a>
-          </li>
-        </ul>
+      <ul class="nav nav-tabs mb-4 nav-fill" role="navigation">
+        <li class="nav-item" role="presentation">
+          <a class="nav-link active" id="enchanting-tab" data-bs-toggle="tab" data-bs-target="#enchanting" role="tab" aria-controls="home" aria-selected="true">Enchanting</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="tailoring-tab" data-bs-toggle="tab" data-bs-target="#tailoring" role="tab" aria-controls="tailoring" aria-selected="false">Tailoring</a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="import-tab" data-bs-toggle="tab" data-bs-target="#import" role="tab" aria-controls="import" aria-selected="false">Import</a>
+        </li>
+      </ul>
 
-        <!-- Enchanting Tab Content-->
-        <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="enchanting" role="tabpanel" aria-labelledby="home-tab">
-            <div class="card bg-black">
-              <div class="card-body">
-                <!-- Search and Category Controls -->
-                <div class="row">
-                  <div class="col-6">
-                    <input class="form-control" id="searchEnchantingText" placeholder="Search..." ng-model="enchantingSearchText">
-                  </div>
-                  <div class="col-6">
-                    <select ng-model="enchantingCategorySelect" class="form-select bg-dark text-muted" aria-label="Enchanting category select">
-                      <option selected value>Select Category</option>
-                      <option ng-repeat="skill in enchantingSkillsStored | unique: 'category'" value="{{skill.category}}">{{skill.category}}</option>
-                    </select>
-                  </div>
+      <!-- Enchanting Tab Content-->
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="enchanting" role="tabpanel" aria-labelledby="home-tab">
+          <div class="card bg-black">
+            <div class="card-body">
+              <!-- Search and Category Controls -->
+              <div class="row">
+                <div class="col-6">
+                  <input class="form-control" id="searchEnchantingText" placeholder="Search..." ng-model="enchantingSearchText">
+                </div>
+                <div class="col-6">
+                  <select ng-model="enchantingCategorySelect" class="form-select bg-dark text-muted" aria-label="Enchanting category select">
+                    <option selected value>Select Category</option>
+                    <option ng-repeat="skill in enchantingSkillsStored | unique: 'category'" value="{{skill.category}}">{{skill.category}}</option>
+                  </select>
                 </div>
               </div>
-              <!-- Results -->
-              <ul class="list-group list-group-flush">
-                <li ng-repeat="skill in enchantingSkillsStored | filter: {category: enchantingCategorySelect, name: enchantingSearchText}" class="list-group-item list-group-item-action bg-black quality-ffffff"><a href="https://tbc.wowhead.com/spell/{{skill.id}}"
-                    target="_blank" class="wowhead-link stretched-link">{{skill.name}}</a>
-                </li>
-              </ul>
             </div>
+            <!-- Results -->
+            <ul class="list-group list-group-flush">
+              <li ng-repeat="skill in enchantingSkillsStored | filter: {category: enchantingCategorySelect, name: enchantingSearchText}" class="list-group-item list-group-item-action bg-black quality-ffffff"><a href="https://tbc.wowhead.com/spell/{{skill.id}}"
+                  target="_blank" class="wowhead-link stretched-link">{{skill.name}}</a>
+              </li>
+            </ul>
           </div>
-
-          <!-- Tailoring Tab Content-->
-          <div class="tab-pane fade" id="tailoring" role="tabpanel" aria-labelledby="enchanting-tab">
-            <div class="card bg-black">
-              <div class="card-body">
-                <!-- Search and Category Controls -->
-                <div class="row">
-                  <div class="col-6">
-                    <input class="form-control" id="tailoringSearchText" placeholder="Search..." ng-model="tailoringSearchText">
-                  </div>
-                  <div class="col-6">
-                    <select ng-model="tailoringCategorySelect" class="form-select bg-dark text-muted" aria-label="Tailoring Category select">
-                      <option selected value>Select Category</option>
-                      <option ng-repeat="skill in tailoringSkillsStored | unique: 'categorie'" value="{{skill.categorie}}">{{skill.categorie}}</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <!-- Results -->
-              <ul class="list-group list-group-flush">
-                <li ng-repeat="skill in tailoringSkillsStored | filter: {categorie: tailoringCategorySelect, name: tailoringSearchText}" class="list-group-item list-group-item-action bg-black ng-class: quality-{{skill.color}}"><a href="https://tbc.wowhead.com/item/{{skill.id}}"
-                    target="_blank" class="wowhead-link stretched-link">{{skill.name}}</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Import Tab Content-->
-          <div class="tab-pane fade" id="import" role="tabpanel" aria-labelledby="enchanting-tab">
-
-            <div class="row my-4">
-              <div class="col">
-
-                <h5 class="text-light">TradeSkillExporter Parsing Tool</h5>
-                <p>Currently there are two addons that can be used to export profession skills from World of Warcraft Classic. </p>
-                <p><a href="https://www.curseforge.com/wow/addons/professions-exporter" target="_blank">Professions exporter</a> exports trade skills as an array of objects, but it currently does not contain any categories for enchanting
-                  formulas.</p>
-
-                <p><a href="https://www.curseforge.com/wow/addons/tradeskillexporter" target="_blank">TradeSkillExporter</a> exports data as a simple list. This import tool can be used to parse the output from TradeSkillExporter to build an
-                  array of
-                  objects
-                  containing the skill and it's category.</p>
-                <!-- Input Box -->
-                <div class="form-floating">
-                  <textarea ng-model="tradeSkillsInput" class="form-control" placeholder="Paste Trade Skills string here" id="tradeSkillsInput" style="height: 10rem"></textarea>
-                  <label for="floatingTextarea2">Trade Skills Input</label>
-                </div>
-                <button ng-click="submitSkills()" data-bs-toggle="modal" data-bs-target="#wowProfessionModal" class="btn btn-teal my-3">Submit</button>
-              </div>
-            </div>
-
-            <!-- Modal -->
-            <div class="modal fade" id="wowProfessionModal" tabindex="-1" aria-labelledby="wowProfessionModal" aria-hidden="true">
-              <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="wowProfessionModal">World of Warcraft Prossesions</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <h6>Profession Skills</h6>
-                    <div class="alert alert-secondary overflow-auto professions-output" role="alert">
-                      <code id="wowProfessions"></code>
-                    </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-sm btn-teal" id="copySkills" ng-click="copyWowTradeSkills('wowProfessions')">Copy Skills</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
         </div>
 
+        <!-- Tailoring Tab Content-->
+        <div class="tab-pane fade" id="tailoring" role="tabpanel" aria-labelledby="enchanting-tab">
+          <div class="card bg-black">
+            <div class="card-body">
+              <!-- Search and Category Controls -->
+              <div class="row">
+                <div class="col-6">
+                  <input class="form-control" id="tailoringSearchText" placeholder="Search..." ng-model="tailoringSearchText">
+                </div>
+                <div class="col-6">
+                  <select ng-model="tailoringCategorySelect" class="form-select bg-dark text-muted" aria-label="Tailoring Category select">
+                    <option selected value>Select Category</option>
+                    <option ng-repeat="skill in tailoringSkillsStored | unique: 'categorie'" value="{{skill.categorie}}">{{skill.categorie}}</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <!-- Results -->
+            <ul class="list-group list-group-flush">
+              <li ng-repeat="skill in tailoringSkillsStored | filter: {categorie: tailoringCategorySelect, name: tailoringSearchText}" class="list-group-item list-group-item-action bg-black ng-class: quality-{{skill.color}}"><a href="https://tbc.wowhead.com/item/{{skill.id}}"
+                  target="_blank" class="wowhead-link stretched-link">{{skill.name}}</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Import Tab Content-->
+        <div class="tab-pane fade" id="import" role="tabpanel" aria-labelledby="enchanting-tab">
+
+          <div class="row my-4">
+            <div class="col">
+
+              <h5 class="text-light">TradeSkillExporter Parsing Tool</h5>
+              <p>Currently there are two addons that can be used to export profession skills from World of Warcraft Classic. </p>
+              <p><a href="https://www.curseforge.com/wow/addons/professions-exporter" target="_blank">Professions exporter</a> exports trade skills as an array of objects, but it currently does not contain any categories for enchanting
+                formulas.</p>
+
+              <p><a href="https://www.curseforge.com/wow/addons/tradeskillexporter" target="_blank">TradeSkillExporter</a> exports data as a simple list. This import tool can be used to parse the output from TradeSkillExporter to build an
+                array of
+                objects
+                containing the skill and it's category.</p>
+              <!-- Input Box -->
+              <div class="form-floating">
+                <textarea ng-model="tradeSkillsInput" class="form-control" placeholder="Paste Trade Skills string here" id="tradeSkillsInput" style="height: 10rem"></textarea>
+                <label for="floatingTextarea2">Trade Skills Input</label>
+              </div>
+              <button ng-click="submitSkills()" data-bs-toggle="modal" data-bs-target="#wowProfessionModal" class="btn btn-teal my-3">Submit</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="wowProfessionModal" tabindex="-1" aria-labelledby="wowProfessionModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="wowProfessionModal">World of Warcraft Prossesions</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h6>Profession Skills</h6>
+          <div class="alert alert-secondary overflow-auto professions-output" role="alert">
+            <code id="wowProfessions"></code>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-sm btn-teal" id="copySkills" ng-click="copyWowTradeSkills('wowProfessions')">Copy Skills</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Footer -->
